--- a/www/styles/settings.css
+++ b/www/styles/settings.css
@@ -1,9 +1,7 @@
 
 #settingsModal .modal-content {
 padding:0;	
-margin-top:60px;
 padding-bottom:120px;
-height:100%;
 width:100%;
 }
 
@@ -11,8 +9,6 @@ width:100%;
 width:100%;	
 height:100%;
 }
-
-
 
 #accountContainerRow {
 padding-top:10px !important;	
